--- a/.github/workflows/publish-new-release.yml
+++ b/.github/workflows/publish-new-release.yml
@@ -110,13 +110,13 @@ jobs:
           asset_content_type: application/gzip
 
       - name: Login to docker
-      - uses: azure/docker-login@v1
+        uses: azure/docker-login@v1
         with:
           username: ${{ secrets.DOCKER_REGISTRY_USERNAME }}
           password: ${{ secrets.DOCKER_REGISTRY_PASSWORD }}
 
       - name: Publish docker image
-      - run: |
+        run: |
           docker build . -t comitnetwork/cnd:${{ env.RELEASE_VERSION }} -t comitnetwork/cnd:latest
           docker push comitnetwork/cnd:${{ env.RELEASE_VERSION }}
 #          docker push comitnetwork/cnd:latest
