--- a/.github/workflows/publish-new-release.yml
+++ b/.github/workflows/publish-new-release.yml
@@ -69,25 +69,25 @@ jobs:
       - uses: actions/checkout@v2
         with:
           ref: ${{ github.event.pull_request.merge_commit_sha }}
-
-      - name: Extract toolchain version from rust-toolchain
-        run: echo "::set-env name=RUST_TOOLCHAIN::$(cat rust-toolchain)"
-
-      - name: Install ${{ env.RUST_TOOLCHAIN }} toolchain
-        uses: actions-rs/toolchain@v1
-        with:
-          profile: minimal
-          toolchain: ${{ env.RUST_TOOLCHAIN }}
-          override: true
-
+#
+#      - name: Extract toolchain version from rust-toolchain
+#        run: echo "::set-env name=RUST_TOOLCHAIN::$(cat rust-toolchain)"
+#
+#      - name: Install ${{ env.RUST_TOOLCHAIN }} toolchain
+#        uses: actions-rs/toolchain@v1
+#        with:
+#          profile: minimal
+#          toolchain: ${{ env.RUST_TOOLCHAIN }}
+#          override: true
+#
       - name: Build ${{ matrix.os }} release binary
         id: build
         run: |
-          make build BUILD_ARGS='--release'
-          mkdir ~/package
-          ARCHIVE_NAME="comit-rs_${{ env.RELEASE_VERSION }}_$(uname -s)_$(uname -m).tar.gz"
-          cd ~/artifacts && tar czvf ~/package/$ARCHIVE_NAME *
+          mkdir -p ./target/release
+          touch ./target/release/cnd
+          ARCHIVE_NAME="cnd_${{ env.RELEASE_VERSION }}_$(uname -s)_$(uname -m).tar.gz"
 
+          tar -C target/release --create --file=$ARCHIVE_NAME cnd
           echo "::set-output name=archive-name::$ARCHIVE_NAME"
 
       - name: Download upload url artifact
@@ -96,7 +96,8 @@ jobs:
           name: upload-url
 
       - name: Make upload url available as an env variable
-        run: echo "::set-env name=UPLOAD_URL::$(cat upload-url.txt)"
+        run: |
+          echo "::set-env name=UPLOAD_URL::$(cat upload-url.txt)"
 
       - name: Upload ${{ matrix.os }} release binary
         uses: actions/upload-release-asset@v1
@@ -104,7 +105,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ env.UPLOAD_URL }}
-          asset_path: ~/package/${{ steps.build.outputs.archive-name }}
+          asset_path: ./${{ steps.build.outputs.archive-name }}
           asset_name: ${{ steps.build.outputs.archive-name }}
           asset_content_type: application/gzip
 
