--- a/.github/workflows/publish-new-release.yml
+++ b/.github/workflows/publish-new-release.yml
@@ -44,7 +44,7 @@ jobs:
       - name: Store upload url as an artifact
         uses: actions/upload-artifact@v1
         with:
-          name: upload-url
+          name: upload-url-artifact
           path: ./upload_url.txt
 
 #      - name: Merge release into dev branch
@@ -66,6 +66,14 @@ jobs:
     runs-on: ${{ matrix.os }}-latest
     needs: release
     steps:
+      - name: Extract version from branch name (for release branches)
+          #        if: startsWith(github.event.pull_request.head.ref, 'release/')
+        run: |
+          BRANCH_NAME="${{ github.event.pull_request.head.ref }}"
+          VERSION=${BRANCH_NAME#release/}
+
+          echo "::set-env name=RELEASE_VERSION::test-${{ github.sha }}"
+
       - uses: actions/checkout@v2
         with:
           ref: ${{ github.event.pull_request.merge_commit_sha }}
@@ -93,11 +101,11 @@ jobs:
       - name: Download upload url artifact
         uses: actions/download-artifact@v1
         with:
-          name: upload-url
+          name: upload-url-artifact
 
       - name: Make upload url available as an env variable
         run: |
-          echo "::set-env name=UPLOAD_URL::$(cat upload-url.txt)"
+          echo "::set-env name=UPLOAD_URL::$(cat ./upload-url-artifact/upload-url.txt)"
 
       - name: Upload ${{ matrix.os }} release binary
         uses: actions/upload-release-asset@v1
